--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ body {
     width: 40px;
     height: 40px;
     background: transparent;
-    /*border: 3px solid #667eea;*/
+    border: none;
     border-radius: 50%;
     cursor: pointer;
     z-index: 100;
